# voice-assistant

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  HANDOFF.md  Makefile  README.md  TECH_DEBT.md  docker-compose.yml  start.sh
.claude/: launch.json
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_notes.py  0002_sessions_events.py
backend/src/voice_assistant/: api.py  config.py  db.py  events.py  gaps.py  main.py  models.py  protocol.py  session.py  telemetry.py
backend/src/voice_assistant/agent/: agent.py  chunker.py  history.py  prompts.py
backend/src/voice_assistant/agent/tools/: __init__.py  notes.py  registry.py  timers.py  weather.py
backend/src/voice_assistant/providers/: base.py  deepgram.py
backend/tests/: conftest.py  test_agent_loop.py  test_api.py  test_chunker.py  test_events.py  test_gaps.py  test_health.py  test_history.py  test_migrations.py  test_registry.py  test_session_barge_in.py  test_session_echo_guard.py  test_session_emit.py  test_session_stt.py  test_session_tts.py  test_stt_reconnect.py  test_tools.py  test_tts_provider.py
docs/: NEW_HIRE_GUIDE.md  barge-in-debug-prompt.md  bug-echo-guard-post-playback-drop.md  bug-self-barge-in-echo.md  one-pager.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  LiveSessionContext.tsx  api.ts  gaps.test.ts  gaps.ts  index.css  replay.test.ts  replay.ts  state.test.ts  state.ts  timeline.test.ts  timeline.ts  toolCatalog.tsx  ws.ts
scripts/: mic_sim.py  ws_client.py
(+29 files in other folders)
